<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome to DiveTracker!</string>
    <string name="app_name">DiveTracker</string>

	<string name="header_title">Dive Tracker</string>

    <!-- MAIN MENU/TABHOST -->
    <string name="main_menu_tab_tag_home">home</string>
    <string name="main_menu_tab_tag_dives">dives</string>
    <string name="main_menu_tab_tag_user">user</string>
    <string name="main_menu_tab_home">Home</string>
    <string name="main_menu_tab_dives">Dives</string>
    <string name="main_menu_tab_user">User</string>
        
    <!-- CERTIFICATION -->
    <!-- Certification List -->
    <string name="certification_list_title">Your certifications</string>
    <string name="certification_list_button_add">Add</string>
    <string name="certification_list_menu_delete">Delete</string>
    <string name="no_certifications">Tap \'Add\' to add certifications</string>
    <!-- Certification Details -->
    <string name="certification_details_title">Certification Details</string>
    <string name="certification_details_label_type">Type</string>
    <string name="certification_details_hint_type">OWD, Rescue Diver &#8230;</string>
    <string name="certification_details_label_number">Number</string>
    <string name="certification_details_hint_number">Certification number</string>
    <string name="certification_details_label_organization">Organization</string>
    <string name="certification_details_hint_organization">PADI, SSI, CMAS &#8230;</string>
    <string name="certification_details_label_date">Date</string>
    <string name="certification_details_hint_date">Enter the date of certification</string>
    <string name="certification_details_label_instructor">Instructor</string>
    <string name="certification_details_hint_instructor">Certification instructor</string>
    <string name="certification_details_button_confirm">Confirm</string>

    
    <!-- USER -->
    <!-- User Details -->
    <string name="user_details_title">Your Profile</string>
    <string name="user_details_label_name">Name</string>
    <string name="user_details_defval_name">John</string>
    <string name="user_details_label_surname">Surname</string>
    <string name="user_details_defval_surname">Bubble Maker</string>
    <string name="user_details_contentdesc_profilepic">Profile picture</string>
    <string name="user_details_button_edit">Edit</string>
	<string name="user_details_button_equipment">Equipment</string>
	<string name="user_details_button_certifications">Certifications</string>
    <string name="user_details_tab_tag_certifications">certifications</string>
    <string name="user_details_tab_tag_equipment">equipment</string>
    <string name="user_details_tab_certifications">Certifications</string>
    <string name="user_details_tab_equipment">Equipment</string>
	
    <!-- User Edit -->
    <string name="user_edit_title">Edit Profile</string>
    <string name="user_edit_label_name">Name</string>
    <string name="user_edit_hint_name">Enter your name</string>
    <string name="user_edit_label_surname">Surname</string>
    <string name="user_edit_hint_surname">Enter your surname</string>
    <string name="user_edit_label_profilepic">Profile picture</string>
    <string name="user_edit_contentdesc_profilepic">Profile picture</string>
    <string name="user_edit_button_profilepic_select">Select</string>
    <string name="user_edit_button_confirm">Confirm</string>
    
    <!-- EQUIPMENT -->
    <string name="user_equipment_list_title">Your equipment list</string>
    <string name="equipment_list_empty">There is no equipment available</string>
    
    <!-- DIVE -->
    <string name="dive_name">Name</string>
    <string name="dive_enterDate">Enter Date</string>
    <string name="dive_enterTime">In</string>
    <string name="dive_outTime">Out</string>
    <string name="dive_bottomTime">Bottom time</string>
    <string name="dive_depth">Depth</string>
    <string name="dive_visibility">Visibility</string>
    <string name="dive_latitude">Latitude</string>
    <string name="dive_longitude">Longitude</string>
    <string name="dive_temperature">Temperature</string>
    <string name="dive_airTemp">Air</string>
    <string name="dive_waterTemp">Water</string>    
    <string name="dive_pgIn">PG-In</string>
    <string name="dive_pgOut">PG-Out</string>
    <!-- Dive list -->
    <string name="dive_list_activity">My dives</string>
    <string name="dive_list_title">My dives</string>
    <string name="dive_list_button_add">Add dive</string>
    <string name="dive_no_dives">Go out and bring some good dives!</string>
    <!-- Dive details -->
    <string name="dive_details_activity">Dive</string>
    <string name="dive_details_title">Dive</string>
    <string name="dive_edit_btn">Edit</string>

    <!-- Dive edit -->
    <string name="dive_edit_activity">Dive edition</string>
    <string name="dive_edit_title">Dive edition</string>
    <string name="dive_edit_hint_name">Location name</string>
    <string name="dive_edit_hint_date">Enter date</string>
    <string name="dive_edit_hint_time">Enter time</string>
	<string name="dive_edit_gpin_prompt">Choose PG IN</string>    

    <!-- falutx -->
    <string name="maps_key">0pVsBO32kcBr2Ci4YoEIhaOZwMuadvWqrwbr_Vw</string> 
    <!-- string name="maps_key">0pVsBO32kcBogGW1PgBBxQ2rOICRWAm_AVy-wBQ</string> -->
    
    <!-- jc 
    <string name="maps_key">06iC7cbybRkBv8mw9OFixN44mjcI8ZaFS-snEYg</string>
	-->
    <!-- General -->
    <string name="btn_save">Save</string>
	<string name="btn_confirmation_afirmative">Yes</string>
	<string name="btn_confirmation_negative">No</string>
	<!-- Mesages -->
	<string name="msg_dive_deletion_confirmation">Are you sure you want to delete this dive?</string>
    <!-- COLORS -->
    <color name="listcolor">#2987BA</color>
    <color name="black">#000000</color>
    
    <!-- MENU -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_create">Create</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
</resources>