<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/header"/>
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">
	<!-- Certification Type -->
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/certification_details_label_type"
        android:textSize="20dp"/>
    <EditText 
        android:id="@+id/certification_details_field_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/certification_details_hint_type"
        android:textSize="20dp"/>
    <!-- Certification Number -->
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/certification_details_label_number"
        android:textSize="20dp"/>
    <EditText 
        android:id="@+id/certification_details_field_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/certification_details_hint_number"
        android:textSize="20dp"/>
    <!-- Certifying Organization -->
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/certification_details_label_organization"
        android:textSize="20dp"/>
    <EditText 
        android:id="@+id/certification_details_field_organization"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/certification_details_hint_organization"
        android:textSize="20dp"/>
    <!-- Date of certification -->
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/certification_details_label_date"
        android:textSize="20dp"/>
    <DatePicker 
        android:id="@+id/certification_details_field_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:startYear="1960"
        android:hint="@string/certification_details_hint_date"
        android:textSize="20dp"/>
    <!-- Certifying instructor -->
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/certification_details_label_instructor"
        android:textSize="20dp"/>
    <EditText 
        android:id="@+id/certification_details_field_instructor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/certification_details_hint_instructor"
        android:textSize="20dp"/>    
    </LinearLayout>
    </ScrollView>
    
    <!-- Confirm/Cancel buttons -->
    <LinearLayout 
        android:id="@+id/certification_details_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/certification_details_button_confirm"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/certification_details_button_confirm"
        	android:textSize="20dp"/>
        <Button 
            android:id="@+id/certification_details_button_cancel"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/certification_details_button_cancel"
        	android:textSize="20dp"/>
    </LinearLayout>
</LinearLayout>